--- a/Phase 1/sample.css
+++ b/Phase 1/sample.css
@@ -1,14 +1,15 @@
 .item {
-    height: 80px; width: 80px;
-    border: 1px solid black;
+    height: 40px; width: 80px;
+    border: 2px solid black;
     position: absolute;
     float: left;
     background-color: #ddddff;
 }
+
 #container {
     border: 1px solid gray;
-    width: 700px;
-    height: 500px;
+    width: 640px;
+    height: 480px;
     background-color: gray;
 }
       
@@ -16,14 +17,21 @@
     padding: 10px;
     cursor: move;
 }
-        
+
 .connect {
-    width: 100%;
+    width: -moz-calc(100% - 2px);
+    width: -webkit-calc(100% - 2px);
+    width: -o-calc(100% - 2px);
+    width: calc(100% - 2px);
     height: 20px;
-    background-color: white;
+    background-color: #ccffee;
+    border: 1px solid #bbeedd;
+    height: 20px;
     cursor: pointer;
 }
 
-p {
+div, p {
     text-align: center;
+    font-family: "Andale Mono", monospace;
+    font-size: 12px;
 }
