--- a/Phase 1/sample.css
+++ b/Phase 1/sample.css
@@ -7,6 +7,14 @@
 }
 
 #container {
+    width: 100%;
+    height: 100%;
+    overflow: visible;
+    border: 1px solid red;
+    margin: 0px;
+}
+
+#main_box {
     border: 1px solid gray;
     width: 640px;
     height: 480px;
