--- a/Phase 1/sample.css
+++ b/Phase 1/sample.css
@@ -16,8 +16,10 @@
 
 #main_box {
     border: 1px solid gray;
-    width: 640px;
-    height: 480px;
+    min-width: 640px;
+    min-height: 480px;
+    width: 100%;
+    height: 90%;
     background-color: gray;
 }
       
