Added blue box to show canvas limits

--- a/Phase 2/sample.css
+++ b/Phase 2/sample.css
@@ -22,6 +22,10 @@
     height: 90%;
     background-color: gray;
 }
+
+#maincanvas{
+    border: 1px solid blue;
+}
       
 .title {
     padding: 10px;
