--- a/Phase 2/sample.css
+++ b/Phase 2/sample.css
@@ -48,3 +48,8 @@ div, p {
     font-family: "Andale Mono", monospace;
     font-size: 12px;
 }
+
+h1, h2, h3 {
+    text-align: center;
+    font-family: "Andale Mono", monospace;
+}
