--- a/Phase 2/sample.css
+++ b/Phase 2/sample.css
@@ -1,11 +1,3 @@
-.item {
-    height: 40px; width: 80px;
-    border: 2px solid black;
-    position: absolute;
-    float: left;
-    background-color: #ddddff;
-}
-
 #container {
     width: 100%;
     height: 100%;
@@ -20,7 +12,7 @@
     min-height: 480px;
     width: 100%;
     height: 90%;
-    background-color: gray;
+    background-color: white;
 }
 
 #maincanvas{
